# split

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cacert.pem.h  make.sh  split_main.cpp  test.sh  test_symlink.sh
